--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/status-bar": "6.0.0",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/geolocation": "^5.36.0",
+    "@ionic-native/native-geocoder": "^5.36.0",
     "@ionic/angular": "^8.2.2",
+    "cordova-plugin-geolocation": "^5.0.0",
+    "cordova-plugin-nativegeocoder": "^3.5.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
